force-app/main/default/objects/UserAdditionalInfo__c/UserAdditionalInfo__c.object-meta.xml
<CustomObject>
    <description>La idea es que con este objeto nos permita almacenar datos adicionales acerca de usuarios, para utilizarlos en LWC o APEX</description>
    <label>User Additional Info</label>
    <nameField>
        <displayFormat>UAI-{00000000}</displayFormat>
        <label>User Additional Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Additional Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>