force-app/main/default/objects/UserAdditionalInfo__c/fields/InfoType__c.field-meta.xml
<CustomField>
    <fullName>InfoType__c</fullName>
    <description>Tipo de datos que va a almacenar el registro</description>
    <label>Info type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POPUPLASTTIME</fullName>
            </value>
            <value>
                <fullName>DVSACCOUNTSMANAGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>