force-app/main/default/objects/UserAdditionalInfo__c/fields/Value1__c.field-meta.xml
<CustomField>
    <fullName>Value1__c</fullName>
    <description>Valor genérico de almacén de valores</description>
    <label>Value 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>