force-app/main/default/objects/UserAdditionalInfo__c/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <description>Valor genérico de almacén de valores</description>
    <label>Value 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>